[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Esteban Alvarado <estalvgs1999@estudiantec.cr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
Flask-HTTPAuth = "^4.8.0"
PyJWT = "^2.8.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
